After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693475 - screen: Fix a potentially endless loop
screen: Fix a potentially endless loop
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-02-09 13:42 UTC by Rui Matos
Modified: 2013-02-09 15:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screen: Fix a potentially endless loop (986 bytes, patch)
2013-02-09 13:42 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2013-02-09 13:42:40 UTC
Fix a thinko.
Comment 1 Rui Matos 2013-02-09 13:42:42 UTC
Created attachment 235585 [details] [review]
screen: Fix a potentially endless loop

We always need to move the list pointer forward.
Comment 2 drago01 2013-02-09 15:01:58 UTC
Review of attachment 235585 [details] [review]:

Good catch.
Comment 3 Rui Matos 2013-02-09 15:14:20 UTC
Attachment 235585 [details] pushed as 380154a - screen: Fix a potentially endless loop