screen: Fix a potentially endless loop

We always need to move the list pointer forward.

https://bugzilla.gnome.org/show_bug.cgi?id=693475