src/core/screen.c
@@ -1209,10 +1209,9 @@ meta_screen_foreach_window (MetaScreen *screen,
         {
           MetaWindow *window = tmp->data;
 
-          if (!META_IS_WINDOW (window))
-            continue;
-
-          if (window->screen == screen && !window->override_redirect)
+          if (META_IS_WINDOW (window) &&
+              window->screen == screen &&
+              !window->override_redirect)
             (* func) (screen, window, data);
         }
       
